# CV_CoverLetter_Generator_Agentic_Pipeline

./: .gitignore  AzuriteConfig  README.md  __azurite_db_table__.json  roadmap.md  stage1_prompt.md  v1_spec.md
job-pipeline/: .env.example  README.md  architecture.md  pyproject.toml  requirements.txt  scheduler.py  setup_db.py  task_scheduler.xml
job-pipeline/agent/: CLAUDE.md  bullet_rephraser.py  bullet_selector.py  bullet_suggester.py  config.py  cost_report.py  cv_parser.py  cv_renderer.py  generate_cv.py  jd_parser.py  profile_condenser.py  story_drafter.py  style_updater.py  template_extractor.py  validators.py
job-pipeline/dashboard/: cv_builder_ui.py  review.py
job-pipeline/dashboard/templates/: cv_builder.html
job-pipeline/db/: schema.sql  verify_schema.py
job-pipeline/db/migrations/: 002_cv_generation.sql  (+1 more)
job-pipeline/discovery/: config.yaml  dedup.py  enrichment.py  run_search.py  scorer.py
job-pipeline/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
job-pipeline/logs/: api_usage.jsonl
job-pipeline/output/: cv_1_Zealous_Agency.docx  cv_2577_Jack___Jill.docx  cv_2_Calyptus.docx  cv_7_Jack___Jill.docx
job-pipeline/profile/: cv_template.docx  experience.md  master_bullets.md  scoring_profile.yaml  template_map.json
job-pipeline/scripts/: debug_bullet_mapping.py  e2e_cv_smoke.py  inspect_template_rows.py  normalize_template_map_keys.py
job-pipeline/tests/: __init__.py  test_bullet_intake_api.py  test_bullet_rephraser.py  test_bullet_selector.py  test_bullet_suggester.py  test_cv_parser.py  test_cv_renderer.py  test_db.py  test_dedup.py  test_integration.py  test_jd_parser.py  test_phase11_web_ui.py  test_phase3_validators.py  test_phase4_jd_parser.py  test_phase5_template_extractor.py  test_phase6_bullet_selector.py  test_preferences_api.py  test_profile_condenser.py  test_profile_uploads_api.py  test_scaffold.py  test_schema.py  test_scorer.py  test_search.py  test_story_drafter.py  test_style_updater.py  test_web_ui.py
(+29 files in other folders)
